# api.yaml
@@ -892,6 +892,20 @@ paths:
         "200":
           description: OK
 
+  
+  /api/v1/extra/random/query:
+    get:
+      tags:
+        - Setting Control API
+      summary: Random Institute -(verified)
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: OK
+
   #User Dashboard API
 
   /api/v1/user/post/{id}/all/user/posts:
