# routes/Extra/extraRoute.js
@@ -5,5 +5,7 @@ const catchAsync = require('../../Utilities/catchAsync')
 
 router.patch('/age/:uid', catchAsync(Extra.validateUserAge))
 
+router.get('/random/query', catchAsync(Extra.retrieveRandomInstituteQuery))
+
 
 module.exports = router
